fixing css and add definition

--- a/index.html
+++ b/index.html
@@ -14,29 +14,25 @@
                 <div class="row">
                     <div class="card-content">
                         <div class="card-header">
-                            <h1>React</h1>
+                            <h1>React js</h1>
                             <hr>
                         </div>
                         <div class="card-body">
                             <img src="assets\img\html.png" alt="">
                             <p>
-                            seperti <code>&lt;article&gt;</code>,<code>&lt;header&gt;</code>,<code>&lt;footer&gt;</code>.
-                            <a href="https://devdocs.io/html/" class=""><code>Ducumentation</code></a>
+                                React.js is an open-source JavaScript library that is used for building user interfaces specifically for single-page applications. It's used for handling the view layer for web and mobile apps.
                             </p>
                         </div>
                     </div>
                     <div class="card-content">
                         <div class="card-header">
-                            <h1>Vue</h1>
+                            <h1>Vue js</h1>
                             <hr>
                         </div>
                         <div class="card-body">
                         <img src="assets\img\html.png" alt="">
                             <p>
-                            
-                            <li>CSS level 2, disempurnakan oleh W3C pada tahun 1998, dimana terjadi perubahan pada format dokumen yang bisa ditampilkan di printer.</li>
-                            <li>CSS level 3, pada level ini terjadi perkembangan dimana bisa menampilkan animasi warna dan 3D pada halaman website, dan fitur lain seperti: multiple background, drop-shadow, border-image, border-radius, CSS Object Model dan CSS-Math, untuk saat ini CSS level 3 menjadi yang terbaru.</li>
-                            <a href="https://devdocs.io/css/" class="">Ducumentation</a>  
+                                Vue.js is an open-source model–view–viewmodel front end JavaScript framework for building user interfaces and single-page applications.
                             </p>
                         </div>
                     </div>
@@ -48,22 +44,19 @@
                         <div class="card-body">
                             <img src="assets\img\html.png" alt="">
                             <p>
-                            Proses penyusunan dan desain JavaScript hanya menghabiskan waktu sepuluh hari oleh Brandan Eich, seorang karyawan Netscape, pada September 1995. Awalnya, 
-                            nama bahasa pemrograman ini adalah Mocha, kemudian menjadi Mona, lalu LiveScript sebelum akhirnya resmi menyandang nama JavaScript. 
-                            
-                            <a href="https://devdocs.io/javascript/" class=""><b>Ducumentation</b></a>
+                                Angular is a platform and framework for building single-page client applications using HTML and TypeScript. Angular is written in TypeScript.
                             </p>
                         </div>
                     </div>
                     <div class="card-content">
                         <div class="card-header">
                             <h1>JQuery</h1>
+                            <hr>
                         </div>
                         <div class="card-body">
                             <img src="assets\img\html.png" alt="">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi neque molestiae eius explicabo mollitia tempore reiciendis, vel, sequi.
-                                <a href="#" class="">Ducumentation</a>
+                                jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
                             </p>
                         </div>
                     </div>
