tambahan responsive layar smartphone & tablet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -8,7 +10,7 @@
         <div class="container">
             <div class="container-content">
                 <div class="heading">
-                <h1>Articles</h1>
+                <h1 >Articles</h1>
                 <hr>
                 </div>
                 <div class="row">
@@ -18,9 +20,10 @@
                             <hr>
                         </div>
                         <div class="card-body">
-                            <img src="assets\img\html.png" alt="">
+                            <img src="assets\img\react.png" alt="">
                             <p>
-                                React.js is an open-source JavaScript library that is used for building user interfaces specifically for single-page applications. It's used for handling the view layer for web and mobile apps.
+                                React.js is an open-source JavaScript library that is used for building user interfaces specifically for single-page applications. 
+                                It's used for handling the view layer for web and mobile apps. Please read the documentation <a href="https://reactjs.org/docs/getting-started.html"> <code> here </code></a> 
                             </p>
                         </div>
                     </div>
@@ -30,9 +33,10 @@
                             <hr>
                         </div>
                         <div class="card-body">
-                        <img src="assets\img\html.png" alt="">
+                        <img src="assets\img\vue.png" alt="">
                             <p>
-                                Vue.js is an open-source model–view–viewmodel front end JavaScript framework for building user interfaces and single-page applications.
+                                Vue.js is an open-source model–view–viewmodel front end JavaScript framework for building user interfaces and single-page applications.  
+                                Please read the documentation <a href="https://v3.vuejs.org/"> <code> here </code></a> 
                             </p>
                         </div>
                     </div>
@@ -42,9 +46,10 @@
                             <hr>
                         </div>
                         <div class="card-body">
-                            <img src="assets\img\html.png" alt="">
+                            <img src="assets\img\angular.png" alt="">
                             <p>
                                 Angular is a platform and framework for building single-page client applications using HTML and TypeScript. Angular is written in TypeScript.
+                                Please read the documentation <a href="https://angular.io/docs"> <code> here </code></a> 
                             </p>
                         </div>
                     </div>
@@ -54,9 +59,10 @@
                             <hr>
                         </div>
                         <div class="card-body">
-                            <img src="assets\img\html.png" alt="">
+                            <img src="assets\img\jquery.png" alt="">
                             <p>
                                 jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
+                                Please read the documentation <a href="https://api.jquery.com/"> <code> here </code></a> 
                             </p>
                         </div>
                     </div>
@@ -68,7 +74,7 @@
                 </div>
                 <div class="row">
                     <div class="cards" id="member1">
-                        <img src="./assets/img/4eof2l4o1sn51.webp" alt="John">
+                        <img src="./assets/img/4eof2l4o1sn51.webp" alt="John" >
                         <h3>Guntur Pratama</h3>
                         <p>Jakarta</p>
                         <a class="instagram" href="https://www.instagram.com/gprtmaaa/">
@@ -103,7 +109,7 @@
                     <div class="cards" id="member4">
                         <img src="./assets/img/ppawzo4o1sn51.webp" alt="John">
                         <h3>Herlyn Striyani </h3>
-                        <p>Solo</p>
+                        <p> Solo</p>
                         <a class="instagram" href="https://www.instagram.com/errherlyns/">
                             <img src="./assets/img/instagram.png" alt="">
                         </a>
