tambahan header dan section

--- a/index.html
+++ b/index.html
@@ -6,11 +6,34 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="header-left">
+                <a href="#">D09</a>
+            </div>
+            <div class="header-right">
+                <ul>
+                    <li><a href=""> Home</a></li>
+                    <li><a href="#articles"> Article</a></li>
+                    <li><a href="#members"> About Us</a> </li>
+                </ul>
+            </div>
+            
+          </nav>
+    </header>
     <main>
         <div class="container">
+            <section>
+                <img src="assets/img/background-image.png" alt="" srcset="">
+                <div class="card-home">
+                   <h2>Proyek Website D09</h2>
+                   <br>Selamat datang di proyek website D09.
+                   <br>Silakan lihat portofolio kami
+                </div>
+                </section>
             <div class="container-content">
                 <div class="heading">
-                <h1 >Articles</h1>
+                <h1 id="articles">Articles</h1>
                 <hr>
                 </div>
                 <div class="row">
@@ -70,7 +93,7 @@
             </div>
             <div class="container-about">
                 <div class="heading">
-                    <h1 class="about-title">D09's Members</h1>
+                    <h1 class="about-title" id="members">D09's Members</h1>
                 </div>
                 <div class="row">
                     <div class="cards" id="member1">
