--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </nav>
     </header>
     <main>
-        <div style="" class="container">
+        <div class="container">
             <section>
                 <img src="assets/img/background-image.png" alt="" srcset="">
                 <div class="card-home">
