fix content home

--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="header-left">
-                <a href="#">D09</a>
+    <div class="container-home">
+        <header>
+            <nav>
+                <div class="header-left">
+                    <a href="#">D09</a>
+                </div>
+                <div class="header-right">
+                    <ul>
+                        <li><a href=""> Home</a></li>
+                        <li><a href="#articles"> Article</a></li>
+                        <li><a href="#members"> About Us</a> </li>
+                    </ul>
+                </div>      
+            </nav>
+        </header>
+        <div class="content-home" style="background-image: url(./assets/img/background-image.png);">
+            <div class="card-home">
+                <h2>Proyek Website D09</h2>
+                <br>Selamat datang di proyek website D09.
+                <br>Silakan lihat portofolio kami
             </div>
-            <div class="header-right">
-                <ul>
-                    <li><a href=""> Home</a></li>
-                    <li><a href="#articles"> Article</a></li>
-                    <li><a href="#members"> About Us</a> </li>
-                </ul>
-            </div>
-            
-          </nav>
-    </header>
+        </div>
+        </div>
     <main>
         <div class="container">
-            <section>
-                <img src="assets/img/background-image.png" alt="" srcset="">
-                <div class="card-home">
-                   <h2>Proyek Website D09</h2>
-                   <br>Selamat datang di proyek website D09.
-                   <br>Silakan lihat portofolio kami
-                </div>
-                </section>
             <div class="container-content">
                 <div class="heading">
                 <h1 id="articles">Articles</h1>
