--- a/index.html
+++ b/index.html
@@ -4,37 +4,44 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="container-home">
-        <header>
-            <nav>
-                <div class="header-left">
-                    <a href="#">D09</a>
-                </div>
-                <div class="header-right">
-                    <ul>
-                        <li><a href=""> Home</a></li>
-                        <li><a href="#articles"> Article</a></li>
-                        <li><a href="#members"> About Us</a> </li>
-                    </ul>
-                </div>      
-            </nav>
-        </header>
-        <div class="content-home" style="background-image: url(./assets/img/background-image.png);">
-            <div class="card-home">
-                <h2>Proyek Website D09</h2>
-                <br>Selamat datang di proyek website D09.
-                <br>Silakan lihat portofolio kami
+    <header>
+        <nav>
+            <div class="header-left">
+                <a href="#">D09</a>
             </div>
-        </div>
-        </div>
+            <span class="fa fa-bars menu-icon"></span>
+            <div class="header-right">
+                <ul>
+                    <li><a href=""> Home</a></li>
+                    <li><a href="#articles"> Article</a></li>
+                    <li><a href="#members"> About Us</a> </li>
+                </ul>
+            </div>      
+        </nav>
+    </header>
     <main>
         <div class="container">
+            <div class="container-home">
+                <div class="card-home">
+                    <div class="content-text">
+                        <h2>Proyek Website D09</h2>
+                     
+                        <p> Selamat datang di proyek website D09.</p>
+                       
+                        <p> Silakan lihat portofolio kami </p>
+                    </div>
+                </div>
+                <!-- <div class="background">
+                    <img src="./assets/img/background-image.png" alt="">  
+                </div> -->
+            </div>
             <div class="container-content">
                 <div class="heading">
-                <h1 id="articles">Articles</h1>
-                <hr>
+                    <h1 id="articles">Articles</h1>
+                    <hr>
                 </div>
                 <div class="row">
                     <div class="card-content">
