--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <title>D09</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="header-left">
-                <a href="#">D09</a>
-            </div>
-            <span class="fa fa-bars menu-icon"></span>
-            <div class="header-right">
-                <ul>
-                    <li><a href=""> Home</a></li>
-                    <li><a href="#articles"> Article</a></li>
-                    <li><a href="#members"> About Us</a> </li>
-                </ul>
-            </div>      
-        </nav>
-    </header>
+    <nav>
+        <input type="checkbox" id="res-menu">
+        <label for="res-menu">
+            <i class="fa fa-bars" id="sign-one"></i>
+            <i class="fa fa-times" id="sign-two"></i>
+        </label>
+        <h1>D09</h1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#articles">Articles</a></li>
+            <li><a href="#members">Our Member</a></li>
+        </ul>
+    </nav>   
     <main>
         <div class="container">
             <div class="container-home">
