--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <i class="fa fa-bars" id="sign-one"></i>
             <i class="fa fa-times" id="sign-two"></i>
         </label>
-        <h1>D09</h1>
+            <a href="#"><h1>D09</h1></a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#articles">Articles</a></li>
@@ -24,7 +24,7 @@
     <main>
         <div class="container">
             <div class="container-home">
-                <div class="card-home">
+                <!--<div class="card-home">
                     <div class="content-text">
                         <h2>Proyek Website D09</h2>
                      
@@ -33,9 +33,12 @@
                         <p> Silakan lihat portofolio kami </p>
                     </div>
                 </div>
-                <!-- <div class="background">
+                <div class="background">
                     <img src="./assets/img/background-image.png" alt="">  
-                </div> -->
+                </div>-->
+                <h1>Proyek Website D09</h1>
+                <p>Selamat datang di proyek website D09. <br>Silakan lihat portofolio kami.</p>
+                <img class="main-image" src="./assets/img/background-image.png" alt="">
             </div>
             <div class="container-content">
                 <div class="heading">
@@ -142,7 +145,7 @@
                         <a class="instagram" href="https://www.instagram.com/errherlyns/">
                             <img src="./assets/img/instagram.png" alt="">
                         </a>
-                        <a class="github" href="https://github.com/herlynstriyani/">
+                        <a class="github" href="https://github.com/herlyns/">
                             <img src="./assets/img/github.png" alt="">
                         </a>
                     </div>
