--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <p>Selamat datang di proyek website D09. <br>Silakan lihat portofolio kami.</p>
                 <img class="main-image" src="./assets/img/background-image.png" alt="">
             </div>
-            <div class="container-content">
+            <div class="container-content" id="articles">
                 <div class="heading">
-                    <h1 id="articles">Articles</h1>
+                    <h1>Articles</h1>
                     <hr>
                 </div>
                 <div class="row">
