--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <img src="assets\img\react.png" alt="">
                             <p>
                                 React.js is an open-source JavaScript library that is used for building user interfaces specifically for single-page applications. 
-                                It's used for handling the view layer for web and mobile apps. Please read the documentation <a href="https://reactjs.org/docs/getting-started.html"> <code> here </code></a> 
+                                It's used for handling the view layer for web and mobile apps. <br><br><span>Please read the documentation <a href="https://reactjs.org/docs/getting-started.html"> <code> here </code></a></span> 
                             </p>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         <img src="assets\img\vue.png" alt="">
                             <p>
                                 Vue.js is an open-source model–view–viewmodel front end JavaScript framework for building user interfaces and single-page applications.  
-                                Please read the documentation <a href="https://v3.vuejs.org/"> <code> here </code></a> 
+                                <br><br><span>Please read the documentation <a href="https://v3.vuejs.org/"> <code> here </code></a> </span>
                             </p>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                             <img src="assets\img\angular.png" alt="">
                             <p>
                                 Angular is a platform and framework for building single-page client applications using HTML and TypeScript. Angular is written in TypeScript.
-                                Please read the documentation <a href="https://angular.io/docs"> <code> here </code></a> 
+                                <br><br><span>Please read the documentation <a href="https://angular.io/docs"> <code> here </code></a></span> 
                             </p>
                         </div>
                     </div>
@@ -94,18 +94,18 @@
                             <img src="assets\img\jquery.png" alt="">
                             <p>
                                 jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
-                                Please read the documentation <a href="https://api.jquery.com/"> <code> here </code></a> 
+                                <br><br><span>Please read the documentation <a href="https://api.jquery.com/"> <code> here </code></a></span> 
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container-about">
+            <div class="container-about" id="member1">
                 <div class="heading">
                     <h1 class="about-title" id="members">D09's Members</h1>
                 </div>
                 <div class="row">
-                    <div class="cards" id="member1">
+                    <div class="cards">
                         <img src="./assets/img/4eof2l4o1sn51.webp" alt="John" >
                         <h3>Guntur Pratama</h3>
                         <p>Jakarta</p>
